--- a/templates/booking/edit.html.twig
+++ b/templates/booking/edit.html.twig
@@ -21,10 +21,10 @@
                 {{ form_label(form.enddate, null, {'label_attr': {'class': 'form-label'}}) }}
                 {{ form_widget(form.enddate, {'attr': {'class': 'form-control'}}) }}
             </div>
-            <div class="form-group mb-3">
+            {# <div class="form-group mb-3">
                 {{ form_label(form.rooms, null, {'label_attr': {'class': 'form-label'}}) }}
                 {{ form_widget(form.rooms, {'attr': {'class': 'form-control'}}) }}
-            </div>
+            </div> #}
             <div class="d-grid">
                 <button type="submit" class="btn btn-primary btn-block">Save</button>
             </div>
