--- a/templates/booking/filter.html.twig
+++ b/templates/booking/filter.html.twig
@@ -5,7 +5,23 @@
 {% block body %}
     <div class="container mt-5">
         <h1 class="mb-4">Bookings Dashboards</h1>
-        
+        <head>
+            <script src='https://cdn.jsdelivr.net/npm/fullcalendar/index.global.min.js'></script>
+            <script>
+
+            document.addEventListener('DOMContentLoaded', function() {
+                const calendarEl = document.getElementById('calendar')
+                const calendar = new FullCalendar.Calendar(calendarEl, {
+                initialView: 'dayGridMonth'
+                })
+                calendar.render()
+            })
+
+            </script>
+        </head>
+        <body>
+            <div id='calendar'></div>
+        </body>
         {% if bookings is not empty %}
             <table class="table">
                 <thead>
