--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   
   <!-- Favicon -->
-  <link rel="icon" href="{{ asset('img/logo/favicon.ico') }}" type="image/x-icon">
+  <link rel="icon" href="{{ asset('img/logo/logo.svg') }}" type="image/x-icon">
   <!-- CSS -->
   <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/header.css') }}">
@@ -59,7 +59,7 @@
 
 <nav class="navbar navbar-expand-lg header">
     <a class="navbar-brand" href="/">
-        <img src="{{ asset('img/logo/logo.png') }}" alt="Logo" width="50"> Hotel Dashboard
+        <img style="margin-left:1rem"src="{{ asset('img/logo/logo.svg') }}" alt="Logo" width="50"> Hotel Dashboard
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
