--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="{{ asset('assets/css/available-rooms.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/rooms.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/booking-rooms.css') }}">
+  <link rel="stylesheet" href="{{ asset('assets/css/lostitems.css') }}">
   <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -98,6 +99,7 @@
                     <a class="dropdown-item" href="{{ path('app_customers') }}"><i class="fas fa-users"></i> Customers</a>
                     <a class="dropdown-item" href="{{ path('app_booking_filter') }}"><i class="fas fa-filter"></i> Bookings</a>
                     <a class="dropdown-item" href="{{ path('app_rooms_index') }}"><i class="fas fa-bed"></i> Rooms</a>
+                    <a class="dropdown-item" href="{{ path('app_lostitem_index') }}"><i class="fas fa-key"></i> Lost and Found</a>
                     {% endif %}
                 </div>
             </li>
