Make final Style Changes

--- a/public/assets/css/rooms.css
+++ b/public/assets/css/rooms.css
@@ -8,7 +8,7 @@
     border: 0.1px solid gray;
     border-radius: 1rem;
     margin-bottom: 2rem;
-    background: gray;
+    background: black;
     color: white;
 }
 
