--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -330,3 +330,61 @@ footer {
         flex-direction: column;
     }
 }
+
+/* Booking Buttons */
+
+.btn {
+    background-color: #800080 !important;
+    color: white !important;
+    border: none !important;
+}
+
+.btn:hover,
+.btn:focus {
+    background-color: #333 !important;
+    color: white !important;
+}
+
+.btn-secondary {
+    background-color: #800080 !important;
+    color: white !important;
+}
+
+.btn-secondary:hover,
+.btn-secondary:focus {
+    background-color: #333 !important;
+    color: white !important;
+}
+
+.btn-success {
+    background-color: #800080 !important;
+    color: white !important;
+}
+
+.btn-success:hover,
+.btn-success:focus {
+    background-color: #333 !important;
+    color: white !important;
+}
+
+.btn-warning {
+    background-color: #800080 !important;
+    color: white !important;
+}
+
+.btn-warning:hover,
+.btn-warning:focus {
+    background-color: #333 !important;
+    color: white !important;
+}
+
+.btn-danger {
+    background-color: #800080 !important;
+    color: white !important;
+}
+
+.btn-danger:hover,
+.btn-danger:focus {
+    background-color: #333 !important;
+    color: white !important;
+}
