--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -82,7 +82,7 @@
                     <i class="fas fa-envelope"></i> Contact
                 </a>
             </li>
-            {% if is_granted('ROLE_ADMIN') and is_granted('ROLE_USER') %}
+            {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_USER') %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('app_booking') }}">
                     <i class="fas fa-calendar-check"></i> Bookings
