Style Changes to Filter

--- a/templates/booking/filter.html.twig
+++ b/templates/booking/filter.html.twig
@@ -30,7 +30,7 @@
         <body>
             <div id='calendar'></div>
         </body>
-        <h1 class="mb-4">Admin Dashboards</h1>
+        <h1 style="margin-top:4rem"class="mb-4">Admin Dashboards</h1>
         {% if bookings is not empty %}
             <table class="table table-bordered">
                 <thead class="thead-dark">
