--- a/templates/security/view_profile.html.twig
+++ b/templates/security/view_profile.html.twig
@@ -16,10 +16,10 @@
                         <p class="card-text">Last Updated: {{ user.updatedAt|date('Y-m-d H:i:s') }}</p>
                     </div>
                 </div>
-            </div>
-            <button type="button" class="btn btn-secondary" onclick="window.history.back();">
+                <button style="margin-top: 4rem"type="button" class="btn btn-secondary" onclick="window.history.back();">
                         <i class="fas fa-arrow-left"></i> Back
-            </button>
+                </button>
+            </div>
         </div>
     </div>
 {% endblock %}
