--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -82,6 +82,9 @@
                     <i class="fas fa-envelope"></i> Contact
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_lostitem_index') }}"><i class="fas fa-key"></i> Lost and Found</a>
+            </li>
             {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_USER') %}
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('app_booking') }}">
