--- a/templates/customers/index.html.twig
+++ b/templates/customers/index.html.twig
@@ -1,4 +1,3 @@
-{# templates/customers/index.html.twig #}
 {% extends 'base.html.twig' %}
 
 {% block title %}Customers{% endblock %}
@@ -7,14 +6,14 @@
 <div class="container mt-5">
     <h1 class="mb-4">Customers</h1>
     <div class="table-responsive">
-        <table class="table table-striped">
-            <thead>
+        <table class="table table-striped table-hover">
+            <thead class="thead-dark">
                 <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Created At</th>
-                    <th>Roles</th>
-                    <th>Action</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Created At</th>
+                    <th scope="col">Roles</th>
+                    <th scope="col">Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -22,12 +21,20 @@
                 <tr>
                     <td>{{ user.name }} {{ user.surname }}</td>
                     <td>{{ user.email }}</td>
-                    <td>{{ user.createdat|date('Y-m-d') }}</td>
+                    <td>{{ user.createdAt|date('Y-m-d') }}</td>
                     <td>{{ user.roles|join(', ') }}</td>
-                    <td>
-                        <a href="{{ path('app_edit_customer', {'id': user.id}) }}" class="btn btn-primary btn-sm">
-                            <i class="fas fa-edit"></i> Edit
-                        </a>
+                   <td>
+                        <div class="d-flex">
+                            <a href="{{ path('app_edit_customer', {'id': user.id}) }}" class="btn btn-primary btn-sm mr-2">
+                                <i class="fas fa-edit"></i> Edit
+                            </a>
+                            <form action="{{ path('app_delete_customer', {'id': user.id}) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this user?');" class="mr-2">
+                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
+                                <button type="submit" class="btn btn-danger btn-sm">
+                                    <i class="fas fa-trash"></i> Delete
+                                </button>
+                            </form>
+                        </div>
                     </td>
                 </tr>
                 {% endfor %}
