--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -102,7 +102,7 @@
                     <a class="dropdown-item" href="{{ path('app_customers') }}"><i class="fas fa-users"></i> Customers</a>
                     <a class="dropdown-item" href="{{ path('app_booking_filter') }}"><i class="fas fa-filter"></i> Bookings</a>
                     <a class="dropdown-item" href="{{ path('app_rooms_index') }}"><i class="fas fa-bed"></i> Rooms</a>
-                    <a class="dropdown-item" href="{{ path('app_lostitem_index') }}"><i class="fas fa-key"></i> Lost and Found</a>
+                    <a class="dropdown-item" href="{{ path('app_lostitem_index_admin') }}"><i class="fas fa-key"></i> Lost and Found</a>
                     {% endif %}
                 </div>
             </li>
